Solved a flexbox problem on smaller screens

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -22,11 +22,12 @@ section
   margin: 15px
   // Above deals with the grid ↑
   position: relative
-  cursor: pointer
   margin-bottom: 1.6rem
+  align-self: flex-start
   background-color: hsla(0, 0%, 100%, 1)
   border-radius: 1rem
   box-shadow: $shadowCard
+  cursor: pointer
   transition: transform 0.5s $zease
 
   &:hover
